# BE_Blanball_chat

./: .env.example  .gitignore  Dockerfile  README.md  deploy-develop-docker-compose.yml  deploy-main-docker-compose.yml  docker-compose.yml  kafka_topics_list.txt  pyproject.toml
.github/workflows/: auto_deploy.yml
chat/: manage.py
chat/chat/: models.py  settings.py
chat/chat/decorators/: __init__.py  clear_global_vars.py  set_required_fields.py
chat/chat/errors/: __init__.py  common_errors.py
chat/chat/exceptions/: __init__.py  invalid_data_exception.py  not_found_exception.py  not_provided_exception.py  permissons_denied_exception.py
chat/chat/helpers/: default_consumer.py  default_producer.py
chat/chat/migrations/: 0001_initial.py  0002_messsage_read.py  0002_messsage_readed.py  0003_remove_chat_author_id.py  0004_chat_disabled_chat_event_id_alter_chat_type.py  0005_chat_image.py  0006_alter_chat_name.py  0007_remove_messsage_read_messsage_read_by.py  0007_remove_messsage_readed_messsage_readed_by.py  0008_alter_chat_options.py  0009_messsage_edited.py  0010_alter_messsage_options.py  0011_remove_messsage_chat_chat_messages_alter_chat_users_and_more.py  0012_messsage_reply_to.py  0013_alter_messsage_reply_to.py  0014_alter_chat_messages_alter_chat_name_alter_chat_users_and_more.py  0015_chat_chat_request_user_id.py  0016_messsage_type.py  0017_alter_chat_name.py  0018_remove_chat_chat_request_user_id.py  (+1 more)
chat/chat/models/: __init__.py  chat.py  (+1 more)
chat/config/: asgi.py  celery.py  settings.py
scripts/: create_kafka_topics.sh  entrypoint.sh  start.sh
(+42 files in other folders)
